kubernetes/calibre/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calibre
  labels:
    app.kubernetes.io/name: calibre
    app.kubernetes.io/part-of: calibre
